--- a/lesson-2/css/awesome-section.css
+++ b/lesson-2/css/awesome-section.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 .awesome-section {
   padding: 15px;
@@ -6,7 +7,7 @@
 .awesome-section__title {
   margin: 85px auto 25px auto;
 
-  font-family: Raleway;
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: normal;
   font-size: 36px;
@@ -25,6 +26,16 @@
   border: 1px solid #d98943;
 }
 .awesome-section__subtitle {
+  margin: 30px auto 36px auto;
+
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+
+  text-align: center;
+
+  color: #86878b;
 }
 .awesome-section__cards-container {
 }
