--- a/AXIT/css/awesome-section.css
+++ b/AXIT/css/awesome-section.css
@@ -61,13 +61,14 @@
 
   border: 1px solid #d98943;
   border-radius: 50%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .awesome-section__card-icon-img {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: calc(50% - 30px / 2);
 }
 
 .awesome-section__card-title {
