--- a/AXIT/css/style.css
+++ b/AXIT/css/style.css
@@ -1,14 +1,18 @@
 @import url('awesome-section.css');
+@import url('pricing.css');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style-type: none;
 }
 
 .container {
   max-width: 1170px;
   margin: 0 auto;
+
+  padding: 15px;
 }
 
 .title {
