--- a/AXIT/css/style.css
+++ b/AXIT/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 @import url('awesome-section.css');
 @import url('pricing.css');
 
