--- a/AXIT/css/pricing.css
+++ b/AXIT/css/pricing.css
@@ -1,5 +1,7 @@
 .pricing {
   background: #f5f5f5;
+
+  padding: 15px 0;
 }
 
 .pricing__title {
@@ -14,11 +16,13 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+
+  padding-bottom: 20px;
 }
 
 .pricing__plan {
   width: 340px;
-  margin-bottom: 67px;
+  margin-bottom: 45px;
 
   text-align: center;
 }
