--- a/AXIT/css/style.css
+++ b/AXIT/css/style.css
@@ -30,6 +30,18 @@
   color: #212121;
 }
 
+.title::after {
+  content: '';
+  display: block;
+
+  width: 64px;
+  height: 0px;
+
+  margin: 34px auto 0 auto;
+
+  border: 1px solid #d98943;
+}
+
 .subtitle {
   font-family: 'Open Sans';
   font-style: normal;
@@ -39,13 +51,4 @@
   text-align: center;
 
   color: #86878b;
-}
-
-.divider {
-  width: 64px;
-  height: 2px;
-
-  margin: 0 auto;
-
-  border: 1px solid #d98943;
 }
