--- a/AXIT/css/customers.css
+++ b/AXIT/css/customers.css
@@ -1,22 +1,85 @@
 .customers {
+  padding: 15px 0;
 }
 .customers__title {
+  margin: 65px auto 34px auto;
 }
 .customers__subtitle {
+  margin: 34px auto 67px auto;
 }
 .customers__cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+
+  padding-bottom: 20px;
+  margin-bottom: 40px;
 }
 .customers__card {
+  width: 300px;
+  margin-bottom: 45px;
+  padding: 1px;
 }
 .customers__card-testimonial {
+  background: #e2e2e2;
+  border-radius: 7px;
+
+  padding: 8px 20px 8px 20px;
+
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 19px;
+  text-align: center;
+
+  color: #86878b;
+  position: relative;
+
+  margin-bottom: 22px;
+}
+
+.customers__card-testimonial::after {
+  content: '';
+  display: block;
+
+  width: 17px;
+  height: 17px;
+  background: #e2e2e2;
+  transform: rotate(-45deg);
+
+  position: absolute;
+  left: 39px;
 }
 .customers__card-customerinfo {
+  display: flex;
 }
 .customers__card-photo {
+  margin: 0 45px 0 45px;
+  width: 70px;
+  height: 70px;
 }
 .customers__card-credentials {
 }
 .customers__card-name {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 27px;
+  text-align: center;
+
+  color: #333333;
+
+  margin: 8px 0 12px 0;
 }
 .customers__card-position {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 19px;
+  text-align: right;
+
+  color: #86878b;
 }
