added Axure section

--- a/AXIT/css/style.css
+++ b/AXIT/css/style.css
@@ -4,6 +4,7 @@
 @import url('awesome.css');
 @import url('pricing.css');
 @import url('customers.css');
+@import url('axure.css');
 
 * {
   margin: 0;
