--- a/AXIT/css/style.css
+++ b/AXIT/css/style.css
@@ -13,6 +13,10 @@
   list-style-type: none;
 }
 
+a {
+  text-decoration: none;
+}
+
 .container {
   max-width: 1170px;
   margin: 0 auto;
@@ -28,8 +32,6 @@
 
   text-transform: uppercase;
   text-align: center;
-
-  color: #212121;
 }
 
 .title::after {
@@ -41,7 +43,8 @@
 
   margin: 34px auto 0 auto;
 
-  border: 1px solid #d98943;
+  border-width: 1px;
+  border-style: solid;
 }
 
 .subtitle {
