corrected notes from Alexander's code review

--- a/AXIT/css/style.css
+++ b/AXIT/css/style.css
@@ -6,7 +6,9 @@
 @import url('customers.css');
 @import url('axure.css');
 
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
