--- a/AXIT/css/axure.css
+++ b/AXIT/css/axure.css
@@ -17,11 +17,14 @@
   background: rgba(0, 0, 0, 0.55);
 }
 
+.axure__container {
+  position: relative;
+  z-index: 1;
+}
+
 .axure__title {
   margin: 43px auto 34px auto;
   color: #ffffff;
-  position: relative;
-  z-index: 1;
 }
 
 .axure__title::after {
@@ -38,9 +41,6 @@
   text-align: center;
 
   color: rgba(255, 255, 255, 0.8);
-
-  position: relative;
-  z-index: 1;
 }
 
 .axure__button {
@@ -58,7 +58,8 @@
   text-align: center;
 
   color: #ffffff;
+}
 
-  position: relative;
-  z-index: 1;
+.axure__button:hover {
+  background-color: rgba(255, 255, 255, 0.55);
 }
