--- a/AXIT/css/style.css
+++ b/AXIT/css/style.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css');
 
 @import url('awesome.css');
 @import url('pricing.css');
 @import url('customers.css');
 @import url('axure.css');
+@import url('footer.css');
 
 *,
 *::before,
