--- a/AXIT/css/footer.css
+++ b/AXIT/css/footer.css
@@ -29,8 +29,13 @@
 .footer-social__icon:visited,
 .footer-social__icon:active {
   color: #cccccc;
+
+  transition-property: all;
+  transition-duration: 0.3s;
 }
 
 .footer-social__icon:hover {
   color: #ffffff;
+
+  transform: scale(1.3, 1.3);
 }
