--- a/AXIT/css/social.css
+++ b/AXIT/css/social.css
@@ -49,8 +49,13 @@
 .social-icons__icon:visited,
 .social-icons__icon:active {
   color: #cccccc;
+
+  transition-property: all;
+  transition-duration: 0.3s;
 }
 
 .social-icons__icon:hover {
   color: #ffffff;
+
+  transform: scale(1.3, 1.3);
 }
