--- a/AXIT/css/style.css
+++ b/AXIT/css/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css');
 
-@import url('header.css');
+@import url('navigation.css');
 @import url('social.css');
 @import url('awesome.css');
 @import url('pricing.css');
