--- a/AXIT/css/header.css
+++ b/AXIT/css/header.css
@@ -1,137 +1,5 @@
 .header {
-  background: url('../img/backgrounds/header_background.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  position: relative;
-}
-
-.header::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.45);
-}
-
-.header-container {
+  min-height: 100vh;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-
-  position: relative;
-  z-index: 1;
-}
-
-.header__text {
-  margin: 109px 22px 101px 0;
-  width: 544px;
-}
-
-.header-logo {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: normal;
-  font-size: 60px;
-  line-height: 70px;
-
-  color: #ffffff;
-}
-
-.header-logo__highlighted {
-  color: #ec7979;
-}
-
-.header__title {
-  text-align: left;
-  color: #ffffff;
-
-  margin-top: 32px;
-}
-
-.header__title::after {
-  margin: 34px auto 0 0;
-}
-
-.header__subtitle {
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 300;
-  font-size: 16px;
-  line-height: 19px;
-
-  color: rgba(255, 255, 255, 0.8);
-
-  margin-top: 39px;
-  width: 282px;
-}
-
-.header__text-button {
-  margin: 39px auto 0 0;
-}
-
-.header-form {
-  background: #ffffff;
-  border-radius: 8px;
-  width: 370px;
-  overflow: hidden;
-
-  margin: 110px 0 120px 22px;
-}
-
-.header-form__container {
-  width: 252px;
-  margin: 0 auto 61px auto;
-}
-
-.header-form__title {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 27px;
-  text-align: center;
-
-  color: #333333;
-
-  text-transform: capitalize;
-  margin: 15px auto 14px auto;
-}
-
-.header-form__title-highlighted {
-  color: #ec7979;
-  text-transform: uppercase;
-}
-
-.header-form__label {
-  display: block;
-
-  font-family: Open Sans;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 19px;
-
-  color: #bdbdbd;
-
-  margin: 19px auto 0 auto;
-}
-
-.header-form__input {
-  display: block;
-
-  border-bottom: 1px solid #bdbdbd;
-  border-top: none;
-  border-left: none;
-  border-right: none;
-
-  width: 100%;
-}
-
-.header-form__button {
-  width: 100%;
-  padding: 16px 0 17px 0;
+  flex-direction: column;
 }
