--- a/AXIT/css/navigation.css
+++ b/AXIT/css/navigation.css
@@ -36,11 +36,11 @@
   line-height: 20px;
   text-transform: capitalize;
 
-  margin: 25px -48px 25px -48px;
+  margin: 25px -15px;
 }
 
 .navigation__menu-item {
-  margin: 0 48px 0 48px;
+  margin: 0 15px 0 15px;
 }
 
 .navigation__link {
