--- a/AXIT/css/social.css
+++ b/AXIT/css/social.css
@@ -39,11 +39,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 15px -32px 18px -32px;
+  margin: 15px -15px 18px -15px;
   font-size: 42px;
 }
 .social-icons__item {
-  margin: 0 32px 0 32px;
+  margin: 0 15px;
 }
 
 .social-icons__icon,
