--- a/AXIT/css/navigation.css
+++ b/AXIT/css/navigation.css
@@ -27,7 +27,6 @@
 .navigation__menu {
   display: flex;
   align-items: space-between;
-  flex-wrap: wrap;
 
   font-family: 'Open Sans';
   font-style: normal;
@@ -49,4 +48,24 @@
 
 .navigation__link:hover {
   color: #ffffff;
+}
+
+@media (max-width: 500px) {
+  .navigation-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .navigation__menu {
+    flex-direction: column;
+  }
+
+  .navigation-logo {
+    margin-right: 0;
+    margin-bottom: 0;
+  }
+
+  .navigation__menu-item {
+    margin: 15px auto;
+  }
 }
