--- a/AXIT/css/intro.css
+++ b/AXIT/css/intro.css
@@ -36,7 +36,7 @@
   flex: 1 1 290px;
   max-width: 544px;
 
-  margin: 109px 22px 101px 0;
+  margin: 50px 22px 50px 0;
 }
 
 .intro-logo {
@@ -78,6 +78,7 @@
 }
 
 .intro__text-button {
+  width: 135px;
   margin: 39px auto 0 0;
 }
 
@@ -89,7 +90,7 @@
   border-radius: 8px;
   overflow: hidden;
 
-  margin: 110px 0 120px 22px;
+  margin: 50px 0 50px 22px;
 }
 
 .intro-form__container {
@@ -154,9 +155,24 @@
   }
 
   .intro__text {
-    margin: 20px 0;
+    margin: 20px 11px;
   }
 
+  .intro__text-button {
+    width: 100%;
+    max-width: 370px;
+    margin: 39px auto 0 auto;
+  }
+
+  .intro-form {
+    margin: 20px 11px;
+  }
+}
+
+@media (max-width: 609px) {
+  .intro__text {
+    margin: 20px 0;
+  }
   .intro-form {
     margin: 20px 0;
   }
