fixed the outline for the buttons

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,14 @@ textarea {
   outline: none;
 }
 
+button:focus {
+  outline: none;
+}
+
+button:focus-visible {
+  outline: black auto 1px;
+}
+
 .wrapper {
   min-height: 100vh;
 }
